[refactoring/daengle-38] 알림 API 수정 및 예외처리